tests/baselines/reference/functionDeclarationWithArgumentOfTypeFunctionTypeArray(strict=true).errors.txt
functionDeclarationWithArgumentOfTypeFunctionTypeArray.ts(1,23): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== functionDeclarationWithArgumentOfTypeFunctionTypeArray.ts (1 errors) ====
    function foo(args: { (x): number }[]) {
                          ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        return args.length;
    }
    